# spin

./: .gitignore  README.md  pyproject.toml
data/: spk2info.json
examples/: abx.py  compute_abx.py  config.yaml  hubert.py  template.yaml
src/spin/: __init__.py  augment.py  dataset.py  effects.py  model.py
